# bevy-client

./: Cargo.toml  README.md  rustchannel.toml
.github/workflows/: BuildQuality.yml  BuildQualityChecks.yml  Buildable.yml  Clippy.yml  ClippyAnnotate.yml
src/: components.rs  constants.rs  game.rs  main.rs  networker.rs  receiver.rs  types.rs  utils.rs
src/ai_scripts/: basic_combat.rs  basic_economy.rs  mod.rs
src/camera/: minimap.rs
src/controls/: camera.rs  mod.rs  plugin.rs  select.rs
src/debug/: plugin.rs
src/engine/: actions.rs  assembler.rs  benchmarks.rs  distributor.rs  factory.rs  mod.rs  player.rs  plugin.rs  projectile.rs  resource_blob.rs  resources.rs  terrain.rs  turret.rs  unit.rs
src/lighting/: plugin.rs
src/player_script/: assembler.rs  distributor.rs  mod.rs  plugin.rs  turret.rs  unit.rs
src/projectile/: laser.rs  mod.rs  plugin.rs  resource_blob.rs  unit.rs
src/structure/: assembler.rs  benchmarks.rs  distributor.rs  factory.rs  mod.rs  plugin.rs  turret.rs  utils.rs
src/terrain/: mod.rs  plugin.rs  resources.rs  tiles.rs
src/tiles/: tiles.rs
src/ui/: constants.rs  mod.rs  theme.rs  widgets.rs
src/unit/: benchmarks.rs  mod.rs  plugin.rs
