[package]
name = "hex-game"
version = "0.1.0"
edition = "2021"
license = "propietary"

[dependencies]
bevy = { version = "0.14.1", default-features = true, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_winit",
    "bevy_asset",
    "bevy_sprite",
    "bevy_pbr",
    "embedded_watcher",
] }
rand = "0.8.5"
# winit = "0.29.10"
# image = "0.24"
bevy-inspector-egui = "0.23.0"
log = { version = "0.4.2", features = ["max_level_debug", "release_max_level_warn"] }
# bevy_rapier2d = "0.25.0"
lazy_static = "1.5.0"
hexx ="0.18.0"#{ git = "https://github.com/ManevilleF/hexx" } }
bevy_magic_light_2d = { git = "https://github.com/zaycev/bevy-magic-light-2d.git", branch = "issue/64" } # "0.8.0" # { git = "https://github.com/zaycev/bevy-magic-light-2d.git" }
libnoise = "1.1.2"
enum-map = "2.7.3"
rust_socketio = { version = "0.6.0", features=["async"] }
bevy_egui = "0.30.0"
ashscript-types = { git = "https://github.com/Ashscript-Game/ashscript-types", branch = "main" }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"

[features]
# cargo run --features dev
dev = ["bevy/dynamic_linking", "bevy/file_watcher", "bevy/asset_processor"]

[profile.dev]
debug = 0
strip = "debuginfo"
opt-level = 1 # Switch to 1 for more runtime performance
# overflow-checks = false # Uncomment for better math performance

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
panic = 'abort'
debug = 0
strip = "debuginfo"
# lto = "thin" # Enable for more inlining with a bigger tradeoff in compile times

# Ship this to players
# build command
# cargo build --profile distribution -F tracing/release_max_level_error -F log/release_max_level_off
[profile.distribution]
inherits = "release"
strip = true
lto = "thin"
codegen-units = 1

[workspace]
resolver = "2"
